--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "keineahnung",
-    "displayName": "Dark Colortheme by KeineAhnung",
+    "name": "intepriddarkness",
+    "displayName": "Intrepid Darkness",
     "description": "",
     "version": "1.2.0",
     "engines": {
