--- a/.github/workflows/testBuild.yml
+++ b/.github/workflows/testBuild.yml
@@ -21,4 +21,4 @@ jobs:
           node-version: 14.x
       - run: npm install
       - name: Build
-        run: vsce package
+        run: npm run package
