--- a/.github/workflows/testBuild.yml
+++ b/.github/workflows/testBuild.yml
@@ -19,6 +19,7 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: 14.x
-      - run: npm install
+      - name: npm install
+        run: npm install vsce
       - name: Build
         run: vsce package
