--- a/.github/workflows/testBuild.yml
+++ b/.github/workflows/testBuild.yml
@@ -20,8 +20,8 @@ jobs:
         with:
           node-version: 14.x
       - name: npm install
-        run: npm install vsce
+        run: npm install -g vsce
       - name: npm fund
         run: npm fund
       - name: Build
-        run: vsce package
+        run: npm run build
