--- a/.github/workflows/releaseBuild.yml
+++ b/.github/workflows/releaseBuild.yml
@@ -29,6 +29,7 @@ jobs:
         run: npm run build
       - name: Comit build
         run: |
+          git add .
           git config --global user.name 'TheKeineAhnung'
           git config --global user.email 'thekeineahnung@users.noreply.github.com'
           git commit -am "Automated report"
