--- a/.github/workflows/releaseBuild.yml
+++ b/.github/workflows/releaseBuild.yml
@@ -32,5 +32,6 @@ jobs:
           git add .
           git config --global user.name 'TheKeineAhnung'
           git config --global user.email 'thekeineahnung@users.noreply.github.com'
-          git commit -am "✨ added release file"
+          git checkout -b main
+          git commit -m "✨ added release file"
           git push
