--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -19,7 +19,8 @@ jobs:
       - name: Install Node.js
         uses: actions/setup-node@v1
         with:
-          node-version: 14.x
+          node-version: 10.x
+      - run: npm cache clean --force
       - run: npm install
       - name: Publish
         run: npm run deploy
