--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -21,8 +21,10 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: 10.x
-      - run: npm install -g
-      - run: npm fund
+      - name: npm install
+        run: npm install -g vsce
+      - name: npm fund
+        run: npm fund
       - name: Publish
         run: npm run deploy
         env:
