✨ added pull request trigger

--- a/.github/workflows/buildLightTheme.yml
+++ b/.github/workflows/buildLightTheme.yml
@@ -7,6 +7,12 @@ on:
     paths:
       - "themes/IntrepidDarkness.json"
 
+  pull_request:
+    branches:
+      - main
+    paths:
+      - "themes/IntrepidDarkness.json"
+
   workflow_dispatch:
 
 jobs:
