--- a/.github/workflows/buildLightTheme.yml
+++ b/.github/workflows/buildLightTheme.yml
@@ -40,5 +40,6 @@ jobs:
           git add .
           git config --global user.name 'TheKeineAhnung'
           git config --global user.email 'thekeineahnung@users.noreply.github.com'
-          git commit -m "✨ added lighttheme file"
+          git checkout main
+          git commit -m "✨ new lighttheme file"
           git push
