--- a/.github/workflows/buildLightTheme.yml
+++ b/.github/workflows/buildLightTheme.yml
@@ -42,4 +42,4 @@ jobs:
           git config --global user.email 'thekeineahnung@users.noreply.github.com'
           git checkout main
           git commit -m "✨ new lighttheme file"
-          git push
+          git push origin main
