--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "deploy": "vsce publish --yarn",
-    "build": "vsce package --out releases"
+    "build": "vsce package --out release"
   },
   "publisher": "KeineAhnung",
   "categories": [
